--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.14.1",
     "@mui/material": "^7.3.1",
     "@react-icons/all-files": "^4.1.0",
+    "axios": "^1.11.0",
     "bootstrap": "^5.3.7",
     "react": "^19.1.1",
     "react-bootstrap": "^2.10.10",
