--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
     "@react-icons/all-files": "^4.1.0",
     "axios": "^1.11.0",
     "bootstrap": "^5.3.7",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.1",
     "react": "^19.1.1",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.8.0"
+    "react-router-dom": "^7.8.0",
+    "sweetalert": "^2.1.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.32.0",
